first time login configured

--- a/pages/index.html
+++ b/pages/index.html
@@ -80,6 +80,17 @@
             </div>
 
        </section>
+
+       <section class="newsletter">
+            <h4>Hey there !</h4>
+            <p>Don'f forget to subscirbe to our newsletter. We share daily information on how we can make a change. Feel free to make a change, and join the community.</p>
+
+
+            <div class="form-container">
+                <input type="email" placeholder="Email Address">
+                <button class="cta-btn">Subscribe</button>
+            </div>
+       </section>
     </main>
     
 </body>
