--- a/pages/index.html
+++ b/pages/index.html
@@ -15,8 +15,8 @@
             <div class="nav-links">
                 <a href="#">Services</a>
                 <a href="#">Contact Us</a>
-                <a class="sec-link" href="#">Login</a>
-                <a class="cta-link" href="#">Book Meeting</a>
+                <a class="sec-link" href="./login.html">Login</a>
+                <a class="cta-link" href="./booking.html">Book Meeting</a>
             </div>
         </div>
     </nav>
@@ -33,7 +33,7 @@
            <p class="hero-header">Save the Climate, New Green Technology</p>
            <p class="about">Remove and Automate all programming tasks, with AI Technology and Python. Get assistance from our third party API Services.</p>
            <div class="button-wrapper">
-                <button class="cta-btn">Book Meeting</button>
+                <a class="cta-link" href="./booking.html">Book Meeting</a>
                 <button>Carbon Calculator</button>
            </div>
 
