--- a/pages/login.html
+++ b/pages/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../public/css/base.css">
     <link rel="stylesheet" href="../public/css/booking.css">
     <link rel="stylesheet" href="../public/css/login.css">
-    <script defer src="../js/login.js"></script>
+    <script defer type="module" src="../js/login.js"></script>
     <title>Login</title>
 </head>
 <body>
