typescript and ejs integrated

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="nav-links">
                 <a href="#">Services</a>
                 <a href="#">Contact Us</a>
-                <a class="sec-link" href="./login.html">Login</a>
-                <a class="cta-link" href="./booking.html">Book Meeting</a>
+                <a class="sec-link" href="http://localhost:8080/login">Login</a>
+                <a class="cta-link" href="http://localhost:8080/booking">Book Meeting</a>
             </div>
         </div>
     </nav>
